--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">=16.13.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.10",
+    "@apollo/client": "^3.7.1",
     "@shopify/app-bridge": "^2.0.22",
     "@shopify/app-bridge-react": "^2.0.26",
     "@shopify/app-bridge-utils": "^2.0.26",
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "serve-static": "^1.14.1",
+    "store-js": "^2.0.4",
     "vite": "^2.9.8"
   },
   "devDependencies": {
